<?xml version="1.0"?>
<package>
  <name>rqt_lama</name>
  <version>0.0.0</version>
  <description>The rqt_lama package provides a GUI plugin for visualizing
    the map of the Large Maps Framework.</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rqt_lama</url> -->


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>qt_dotgraph</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <export>
    <architecture_independent/>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
